clusters/lotr/cattle-system/Rancher/app/IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app rancher
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.pixelstack.live`)
      kind: Rule
      services:
        - name: *app
          port: 80
      middlewares:
        - name: secured
